
module(
    name = "com_google_quiche",
    compatibility_level = 1,
)

bazel_dep(name = "abseil-cpp", version = "20250127.0")

bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(name = "boringssl", version = "0.20250114.0")

bazel_dep(name = "protobuf", version = "29.3")

bazel_dep(name = "zlib", version = "1.3.1.bcr.5")

bazel_dep(name = "googletest", version = "1.15.2")
